# nua

./: .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Makefile  README.md  SECURITY.md  TODO.md  cliff.toml  noxfile.py  pyproject.toml  ruff.toml  setup.cfg  shell.nix  tasks.py  uninstall-nua.sh  wsgi.py
doc/: .vale.ini  Makefile  README.md  mkdocs.yml  pyproject.toml
doc/scripts/: gen-api.py
doc/src/: apps.md  funding.md  index.md
doc/templates/: blog-nua.html
nua/: Makefile  README.md  pyproject.toml  tox.ini
nua-agent/: Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
nua-agent/tests/: test_auto_install.py  test_gen_password.py  test_version.py
nua-autobuild/: Makefile  README.md  build.sh  noxfile.py  pyproject.toml  setup.cfg
nua-autobuild/tests/: test_1_version.py  test_build_all_images.py
nua-build/: Makefile  README.md  build.sh  generate_img_wheels.sh  noxfile.py  pyproject.toml  setup.cfg  update_pip_poetry.sh
nua-build/nua_build/: archive_search.py  common  docker_utils_build.py  nua_config.py
nua-build/tests/: _est_apache_basic.py  build_image.py  common.py  test_10_main.py  test_20_default_start.py  test_30_builds_sample_apps.py  test_35_builds_sample_apps_expected_fails.py  test_40_archive_search.py  test_50_builds_real_apps.py  test_apache_basic.py  test_builds_base.py  test_builds_exp.py  test_builds_hedgedoc.py  test_builds_mariadb.py  test_builds_real_apps.py  test_builds_sample_apps.py  test_default_start.py  test_main.py  test_nodejs_install.py  test_sub_folder2.py  test_x_archive_search.py
nua-cli/: Makefile  noxfile.py  pyproject.toml  readme.md  setup.cfg
nua-cli/tests/: conftest.py  test_cli.py  test_main.py
nua-lib/: Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
nua-lib/tests/: test_action_pyproject.py  test_action_replace.py  test_actions.py  test_gen_password.py  test_version.py
nua-orchestrator/: Makefile  README.md  build.py  build.sh  install.py  noxfile.py  pyproject.toml  setup.cfg
nua-orchestrator/nua_orchestrator/: admin_local.py  bash.py  certbot.py  certbot_strategies.py  db_setup.py  deploy_utils.py  docker_utils.py  domain_split.py  local_cmd.py  main.py  mariadb_utils.py  nginx_util.py  panic.py  postgres_utils.py  resource.py  search_cmd.py  service_loader.py  shell.py  site.py  sites_deployment.py  utils.py  volume_normalization.py
nua-orchestrator/test_integration/: README.txt  deployer.py  initialization.py  test_deploy_minimal.py
nua-orchestrator/tests/: README.txt  test_base20.py  test_deploy_auto.py  test_deploy_minimal.py  test_error_deploy.py  test_gen_password.py  test_main.py  test_period_to_seconds.py  test_str_to_bytes.py
nua-runtime/: Makefile  README.md  build.sh  noxfile.py  pyproject.toml  readme.md  setup.cfg
nua-runtime/tests/: README.md  test_gen_password.py  test_version.py
nua-selfbuilder/: README.md  build.sh  noxfile.py  pyproject.toml  setup.cfg
nua-selfbuilder/tests/: test_1_version.py  test_build_all_images.py
nua-server/: Makefile  README.md  asgi.py  noxfile.py  pyproject.toml  readme.md
nua-server/templates/: _base.html  _card.html  _header.html  _top_menu.html
nua-server/tests/: test_main.py
nua/scripts/: setup-nua.py
nua_build/: .gitignore  Makefile  README.md  build.sh  build_dev.sh  dev_build.sh  noxfile.py  nua-build.py  pyproject.toml  setup.cfg  tox.ini
nua_build/nua_build/: __init__.py  actions.py  archive_search.py  config.py  config.toml  constants.py  db_setup.py  deep_access_dict.py  docker_utils.py  docker_utils_build.py  exec.py  gen_password.py  main.py  mariadb_tools.py  mariadb_utils.py  nua_build.toml  nua_config.py  nua_defaults.toml  nua_defaults_settings.toml  postgres.py  rich_console.py  scripting.py  shell.py  version.py
nua_build/runtime/: README.md  nua-setup.py
nua_build/tests/: build_image.py  pytest.ini  test_apache_basic.py  test_builds.py  test_builds_resources.py  test_deep_access_dict.py  test_dummy.py  test_dump_load_settings.py  test_env_db.py  test_frappe_bench.py  test_list.py  test_main.py  test_nodejs_basic.py  test_nodejs_install.py  test_sub_folder.py  test_sub_folder2.py  test_x_archive_search.py
nua_cli/: README.md  build_dev.sh  pyproject.toml  setup.cfg
nua_cli/nua_cli/: __main__.py  client.py  config.py  main.py  nua_cli_defaults.toml  ssh.py
nua_cli/tests/: test_main.py  test_server.py  test_users.py  utils.py
nua_orchestrator/: Makefile  README.md  build.sh  build_dev.sh  noxfile.py  pyproject.toml  setup.cfg
nua_orchestrator/nua_orchestrator/: __init__.py  __main__.py  actions.py  config.py  constants.py  db_setup.py  deep_access_dict.py  deploy_utils.py  docker_utils.py  domain_split.py  keys_utils.py  main.py  nginx_util.py  nua_db.py  nua_defaults_settings.toml  panic.py  params.toml  port_normalization.py  postgres_utils.py  proxy_methods.py  registry.py  resource.py  rpc_utils.py  search_cmd.py  server.py  service_base.py  site.py  sites_deployment.py  ssh_server.py  sshd_server.py  state.py  utils.py  version.py  volume_normalization.py  zmq_rpc_server.py
nua_orchestrator/tests/: README.txt  test_deploy_auto.py  test_error_deploy.py  test_main.py  test_plugin.py  test_server.py  test_str_to_bytes.py  utils.py
nua_orchestrator_local/: README.md  build.sh  build_dev.sh  dev_build.sh  pyproject.toml  update_pip_poetry.sh
nua_orchestrator_local/nua_orchestrator_local/: __init__.py  __main__.py  actions.py  admin_local.py  archive_search.py  bash.py  certbot.py  certbot_strategies.py  deploy_cmd.py  docker_utils.py  domain_split.py  exec.py  gen_password.py  local_cmd.py  main.py  mariadb.py  mariadb_orc.py  mariadb_tools.py  mariadb_utils.py  nginx_util.py  normalize_parameters.py  nua_defaults_settings.toml  nua_env.py  postgres.py  search_cmd.py  service_loader.py  shell.py  site.py  utils.py  version.py  volume_utils.py
nua_orchestrator_local/tests/: README.txt  REPLACE_DOMAIN  replace_domain.py  test_deploy.py  test_main.py  (+4 more)
(+1470 files in other folders)
