[tool.poetry]
name = "nua-monorepo"
version = "0.5.24"
description = ""
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "AGPL"
# Empty package, needed to be able to build the monorepo
packages = [
  { include = "nua_monorepo", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

nua-lib = { path = "nua-lib", develop = true }
nua-cli = { path = "nua-cli", develop = true }
nua-agent = { path = "nua-agent", develop = true }
nua-build = { path = "nua-build", develop = true }
nua-orchestrator = { path = "nua-orchestrator", develop = true }
nua-server = { path = "nua-server", develop = true }

# Pinned for some reason
urllib3 = "<=2.0"


[tool.poetry.group.dev.dependencies]
# Testing / checking / QA tools
nox = "*"
abilian-devtools = "*"
pydeps = "^1.11.1"
autotyping = "^22.9.0"

# Helper for monorepo
invoke = "^2.0.0"
tomlkit = "^0.11.7"

# Helper for remote development
watchfiles = "^0.19.0"

# Debug
snoop = "*"

# Typing
types-setuptools = "*"
types-paramiko = "*"
types-requests = "*"
types-pyyaml = "*"
import-linter = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------------------

[tool.ruff]
select = [
    "F",
    "E",
    "C90",
    "I",
    "UP",
    "N",
    "YTT",
    "B",
    "A",
    "C4",
    "ICN",
    "Q",
    "S",
    "BLE",
    "RET",
    "SIM",
    "TID",
    "RUF",
    "PLC", "PLE", "PLR", "PLW",
]
# Add later: "ANN", "ERA"...

extend-exclude = [
    ".nox",
    # XXX: check later
    "apps",
    "demo",
    "nua",
]

# ------------------------------------------------------------------------------

[tool.bandit]
skips = [
    "B404", # blacklist
    "B603", # subprocess_without_shell_equals_true
]
