[tool.poetry]
name = "nua-docs"
version = "0.4.97"
description = ""
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "GNU FDL"


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocs-blogging-plugin = "^2.2.5"
mkdocs-material = "^9.1.6"
mkdocs-material-extensions = "^1.1.1"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-with-pdf = "^0.9.3"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}

sqla2uml = "^0.1.4"
pygments = "^2.15.1"
modulegraph = "^0.19.3"
pydeps = "^1.12.1"

docformatter = "^1.6.1"
