[tool.poetry]
name = "nua-agent"
version = "0.5.13"
description = "Nua agent"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "nua", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "*"
packaging = "*"
nua-lib = "=0.5.13"
tomli = "^2.0.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"
types-setuptools = "*"
types-pyyaml = "*"

platformdirs = "<3.0.0"

[tool.poetry.scripts]
app_builder = "nua.agent.scripts.app_builder:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*distutils package:DeprecationWarning",
    "ignore::DeprecationWarning",
]


# -----------------------------------------------------------------------------
[tool.ruff]

# -----------------------------------------------------------------------------

[tool.deptry]
exclude = [
    ".nox",
    "tests",
    "noxfile.py",
]
ignore_obsolete = [
    "setuptools",
    "nua-lib",
]
ignore_missing = [
    "nua",
]
ignore_transitive = []

# -----------------------------------------------------------------------------

[tool.pyright]
exclude = [
    ".nox",
    "tests",
    "noxfile.py",
]
