[tool.poetry]
name = "nua-agent"
version = "0.5.17"
description = "Nua agent"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

readme = "readme.md"
documentation = "https://nua.rocks/"
repository = "https://github.com/abilian/nua"

packages = [
    { include = "nua", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "*"
packaging = "*"
nua-lib = { path = "../nua-lib/", develop = true }

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"
types-setuptools = "*"

# Pinned for now
platformdirs = "<3.0.0"

[tool.poetry.scripts]
app_builder = "nua.agent.scripts.app_builder:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*distutils package:DeprecationWarning",
    "ignore::DeprecationWarning",
]


# -----------------------------------------------------------------------------
[tool.ruff]

# -----------------------------------------------------------------------------

[tool.deptry]
exclude = [
    ".nox",
    "tests",
    "noxfile.py",
]
ignore_obsolete = [
    "setuptools",
    "nua-lib",
]
ignore_missing = [
    "nua",
]
ignore_transitive = []

# -----------------------------------------------------------------------------

[tool.pyright]
exclude = [
    ".nox",
    "tests",
    "noxfile.py",
]
