[tool.poetry]
name = "nua-autobuild"
version = "0.4.67"
description = "Nua self builder"
authors = ["Stefane Fermigier <sf@abilian.com>", "Jerome Dumonteil <jd@abilian.com>"]
license = "AGPL"
readme = "README.md"
packages = [
  { include = "nua", from = "src" }
]

[tool.poetry.scripts]
nua-self-build = "nua.autobuild.main:app"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.5.0"

nua-lib = { path = "../nua-lib/", develop = false }
nua-runtime = { path = "../nua-runtime/", develop = false }

tomli = "^2.0.1"
tomli-w = "^1.0.0"
typer = {extras = ["all"], version = "^0.7.0"}
rich = "^12.4.4"
docker = "^6.0"
paramiko = "*"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-ignore = [
    'E711', # comparison to None should be 'if cond is not None:'
    # TODO: fix these
    'E501', # Line too long
    'F401', # "..." imported but unused
    'F841', # Local variable assigned to but never used
    'I001',  # Import block is un-sorted or un-formatted
]


[tool.deptry]
exclude = [
    '.tox',
    '.nox',
    'tests',
    'sandbox',
    'doc',
    'scripts',
    "noxfile.py"
]
ignore_obsolete = [
    "setuptools",
]
ignore_missing = [
    "mariadb",
    "psycopg2",
]
ignore_transitive = [
]


[tool.pyright]
exclude = [
    '.tox',
    '.nox',
    'tests',
    'sandbox',
    'doc',
    'scripts',
]
