[tool.poetry]
name = "nua-autobuild"
version = "0.4.81"
description = "Nua self builder"
authors = ["Stefane Fermigier <sf@abilian.com>", "Jerome Dumonteil <jd@abilian.com>"]
license = "AGPL"
readme = "README.md"
packages = [
  { include = "nua", from = "src" }
]

[tool.poetry.scripts]
nua-self-build = "nua.autobuild.main:app"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "*"

nua-lib = { path = "../nua-lib/", develop = true }
nua-runtime = { path = "../nua-runtime/", develop = true }

tomli = "^2.0.1"
tomli-w = "^1.0.0"
typer = {version = "^0.7.0", extras = ["all"]}
docker = "^6.0"
paramiko = "*"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]

# -----------------------------------------------------------------------------

[tool.ruff]
# Don't remove

# -----------------------------------------------------------------------------

[tool.deptry]
exclude = [
    '.nox',
    'tests',
    "noxfile.py"
]
ignore_obsolete = [
    "setuptools",
]
ignore_missing = [
    "mariadb",
    "psycopg2",
]
ignore_transitive = [
]

# -----------------------------------------------------------------------------

[tool.pyright]
exclude = [
    '.nox',
    'tests',
    'noxfile.py',
]
