[tool.poetry]
name = "nua-build"
version = "0.5.13"
description = "Nua build package (currently: build, core build, agent)"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "AGPL"
readme = "README.md"
packages = [
  { include = "nua", from = "src" }
]


[tool.poetry.scripts]
nua-build = "nua.build.main:app"
nua_test_replace_domain = "nua.build.scripts.test_replace_domain:main"


[tool.poetry.dependencies]
python = "^3.10"
nua-lib = "=0.5.13"
nua-agent = "=0.5.13"
nua-autobuild = "=0.5.13"
tomli = "^2.0.1"
pyyaml = "^6"
snoop = "^0.4.3"
typer = {version = "^0.7.0", extras = ["all"]}
docker = {version = "^6", extras = ["ssh"]}

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"

types-setuptools = "*"
types-pyyaml = "*"

# To please poetry
platformdirs = "<3.0.0"
devtools = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*distutils package:DeprecationWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ------------------------------------------------------------------------------

[tool.ruff]
# Do not remove

# ------------------------------------------------------------------------------

[tool.deptry]
exclude = [
    '.nox',
    'tests',
    "noxfile.py"
]
ignore_obsolete = [
    "nua-autobuild",
    "nua-lib",
    "nua-agent",
]
ignore_missing = [
    "nua",
]
ignore_transitive = [
]

# ------------------------------------------------------------------------------

[tool.pyright]
exclude = [
    '.nox',
    'tests',
    'noxfile.py',
]
