[tool.poetry]
name = "nua-lib"
version = "0.5.13"
description = "Nua common library"
authors = ["Stefane Fermigier <sf@abilian.com>", "Jerome Dumonteil <jd@abilian.com>"]
license = "AGPL"
readme = "README.md"
packages = [
  { include = "nua", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "*"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"
types-setuptools = "*"

# To please poetry
platformdirs = "<3.0.0"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------------------

[tool.ruff]
# Don't remove (needed to inherit from abilian-devtools?)

# ------------------------------------------------------------------------------

[tool.deptry]
exclude = [
    '.nox',
    'tests',
    "noxfile.py"
]
ignore_obsolete = [
    "setuptools",
]
ignore_missing = [
]
ignore_transitive = [
]

# ------------------------------------------------------------------------------

[tool.pyright]
exclude = [
    '.nox',
    'tests',
    'noxfile.py',
]
