[tool.poetry]
name = "nua-orchestrator"
version = "0.5.13"
description = "Nua orchestrator - local implementation"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "AGPL"
readme = "README.md"
packages = [
  { include = "nua", from = "src" }
]

[tool.poetry.scripts]
nua-orchestrator = "nua.orchestrator.cli.main:app"
# Install Nua account and configure orchestrator on local host:
nua-bootstrap = "nua.orchestrator.bootstrap.bootstrap:main"

# TODO: all of these scripts should be subsumed by nua-orchestrator
# (If they are still really needed)
nua-pg-pwd = "nua.orchestrator.scripts.set_pg_pwd:app"
nua-mariadb-init = "nua.orchestrator.scripts.mariadb_restore:app"
nua-list-instances = "nua.orchestrator.scripts.list_instances:main"
nua-print-instances = "nua.orchestrator.scripts.print_instances:main"
nua-print-volumes = "nua.orchestrator.scripts.print_mounted_volumes:main"
nua-print-ports = "nua.orchestrator.scripts.print_used_ports:main"
nua-deactivate-all = "nua.orchestrator.scripts.deactivate_all_instances:main"
nua-docker-list-all = "nua.orchestrator.scripts.docker_list_all:main"
nua-docker-rm-all = "nua.orchestrator.scripts.docker_remove_all:main"
nua_test_services = "nua.orchestrator.service:test"

[tool.poetry.dependencies]
python = "^3.10"
nua-lib = "=0.5.13"
nua-agent = "=0.5.13"
nua-build = "=0.5.13"
nua-autobuild = "=0.5.13"
SQLAlchemy-serializer = "^1.4.1"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
setuptools = "*"
wheel = "*"
tomli = "^2"
paramiko = "^2.11.0"
docker = "^6"
python-dotenv = "^0.21"
pyyaml = "^6"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"
devtools = "*"
types-paramiko = "*"
types-requests = "*"

# To please poetry
platformdirs = "<3.0.0"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------------------

[tool.ruff]
extend-ignore = [
    "E501", # Line too long
]

# ------------------------------------------------------------------------------

[tool.deptry]
exclude = [
    '.nox', 'noxfile.py', 'tests',
]
ignore_obsolete = [
    "nua-lib",
    "nua-agent",
    "nua-autobuild",
    "nua-build",
    "setuptools",
    "wheel",
    "psycopg2-binary",
]
ignore_missing = [
    "nua",
]
ignore_transitive = [
    "packaging",
    "requests",
]

# ------------------------------------------------------------------------------

[tool.pyright]
exclude = [
    '.nox',
    'tests',
    'noxfile.py',
]
